--- a/success.html
+++ b/success.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <h1>Abdoctor is updated,<br> welcome to the 21th version 🚀🩺✨🪐</h1>
+  <h1>Abdoctor is updated,<br> welcome to the 21st version 🚀🩺✨🪐</h1>
 </body>
 </html>
